--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -25,26 +25,26 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bkf-DH-CM3">
-                                            <rect key="frame" x="20" y="1" width="113" height="93"/>
+                                            <rect key="frame" x="10" y="6" width="83" height="83"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="92" id="5vw-x1-mSb"/>
-                                                <constraint firstAttribute="width" constant="113" id="97C-F6-0kt"/>
+                                                <constraint firstAttribute="height" constant="83" id="7H5-Y5-bBC"/>
+                                                <constraint firstAttribute="width" constant="83" id="NBn-pE-B6f"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lDa-jt-TBM">
-                                            <rect key="frame" x="145" y="37.333333333333336" width="241" height="20.333333333333336"/>
+                                            <rect key="frame" x="101" y="37" width="285" height="20.333333333333329"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="lDa-jt-TBM" firstAttribute="leading" secondItem="bkf-DH-CM3" secondAttribute="trailing" constant="12" id="2Eh-FU-rog"/>
-                                        <constraint firstItem="lDa-jt-TBM" firstAttribute="centerY" secondItem="OMz-gY-VYS" secondAttribute="centerY" id="NSf-dw-G7a"/>
-                                        <constraint firstItem="bkf-DH-CM3" firstAttribute="top" secondItem="OMz-gY-VYS" secondAttribute="top" constant="1" id="Ylw-hJ-aVf"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="lDa-jt-TBM" secondAttribute="trailing" constant="8" id="kvx-ni-sfz"/>
-                                        <constraint firstItem="bkf-DH-CM3" firstAttribute="leading" secondItem="OMz-gY-VYS" secondAttribute="leading" constant="20" id="o82-fa-iH9"/>
-                                        <constraint firstItem="bkf-DH-CM3" firstAttribute="centerY" secondItem="OMz-gY-VYS" secondAttribute="centerY" id="pLr-ne-gEN"/>
+                                        <constraint firstItem="bkf-DH-CM3" firstAttribute="leading" secondItem="OMz-gY-VYS" secondAttribute="leading" constant="10" id="5vC-iY-jHO"/>
+                                        <constraint firstItem="lDa-jt-TBM" firstAttribute="leading" secondItem="bkf-DH-CM3" secondAttribute="trailing" constant="8" id="DHS-JW-bfU"/>
+                                        <constraint firstItem="lDa-jt-TBM" firstAttribute="top" secondItem="OMz-gY-VYS" secondAttribute="topMargin" constant="26" id="UzY-Zx-Wju"/>
+                                        <constraint firstItem="bkf-DH-CM3" firstAttribute="top" secondItem="OMz-gY-VYS" secondAttribute="top" constant="6" id="dNr-In-qON"/>
+                                        <constraint firstAttribute="bottom" secondItem="bkf-DH-CM3" secondAttribute="bottom" constant="6" id="dQ9-u8-2QF"/>
+                                        <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="lDa-jt-TBM" secondAttribute="trailing" constant="28" id="k5u-Wo-6be"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
