--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Vwj-9l-fwJ">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -8,37 +8,53 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
+        <!--Contact Table View Controller-->
         <scene sceneID="f8x-X9-Nu4">
             <objects>
-                <tableViewController id="RLt-cE-oCF" sceneMemberID="viewController">
+                <tableViewController id="RLt-cE-oCF" customClass="ContactTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="vCj-UY-VO1">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="wme-Ja-v41">
-                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="contactCell" id="wme-Ja-v41" customClass="ContactTableViewCell" customModule="Random_Users" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="50.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wme-Ja-v41" id="DbP-gR-0ak">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="50.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qin-gT-qQL">
-                                            <rect key="frame" x="16" y="0.0" width="52" height="44"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Contact Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bsx-Cp-0Wf">
-                                            <rect key="frame" x="76" y="11" width="111" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contact Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bsx-Cp-0Wf">
+                                            <rect key="frame" x="70" y="0.0" width="305" height="50.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="50" id="1he-hC-xZZ"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Qin-gT-qQL">
+                                            <rect key="frame" x="10" y="0.0" width="50" height="50.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="50" id="ZMm-J7-Kw8"/>
+                                                <constraint firstAttribute="width" constant="50" id="cx9-II-nBH"/>
+                                            </constraints>
+                                        </imageView>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Bsx-Cp-0Wf" firstAttribute="top" secondItem="DbP-gR-0ak" secondAttribute="top" id="0vg-KZ-c49"/>
+                                        <constraint firstItem="Qin-gT-qQL" firstAttribute="leading" secondItem="DbP-gR-0ak" secondAttribute="leading" constant="10" id="4MQ-0q-dmr"/>
+                                        <constraint firstAttribute="bottom" secondItem="Bsx-Cp-0Wf" secondAttribute="bottom" id="Dut-ng-Giq"/>
+                                        <constraint firstItem="Bsx-Cp-0Wf" firstAttribute="leading" secondItem="Qin-gT-qQL" secondAttribute="trailing" constant="10" id="FLq-r4-as6"/>
+                                        <constraint firstAttribute="bottom" secondItem="Qin-gT-qQL" secondAttribute="bottom" id="Jog-vJ-YJO"/>
+                                        <constraint firstItem="Qin-gT-qQL" firstAttribute="top" secondItem="DbP-gR-0ak" secondAttribute="top" id="Roc-EE-kd7"/>
+                                        <constraint firstAttribute="trailing" secondItem="Bsx-Cp-0Wf" secondAttribute="trailing" id="fsh-mS-ORK"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="CVd-6D-uoZ" kind="show" id="exL-Br-m9x"/>
+                                    <outlet property="contactImage" destination="Qin-gT-qQL" id="ToK-4r-yqM"/>
+                                    <outlet property="contactName" destination="Bsx-Cp-0Wf" id="eE8-US-Wgc"/>
+                                    <segue destination="CVd-6D-uoZ" kind="show" identifier="ContactDetail" id="exL-Br-m9x"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -53,10 +69,10 @@
             </objects>
             <point key="canvasLocation" x="-679.20000000000005" y="-403.44827586206901"/>
         </scene>
-        <!--View Controller-->
+        <!--Contact Detail View Controller-->
         <scene sceneID="ks2-pY-Cmf">
             <objects>
-                <viewController id="CVd-6D-uoZ" sceneMemberID="viewController">
+                <viewController id="CVd-6D-uoZ" customClass="ContactDetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fKh-0Q-GUF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -109,6 +125,12 @@
                         <viewLayoutGuide key="safeArea" id="lci-D2-CYs"/>
                     </view>
                     <navigationItem key="navigationItem" id="atB-kR-O9M"/>
+                    <connections>
+                        <outlet property="contactEmail" destination="42j-nW-1sv" id="IdD-Rj-ehx"/>
+                        <outlet property="contactImage" destination="7hQ-0w-5e7" id="DeC-ZD-BN7"/>
+                        <outlet property="contactName" destination="0s2-IM-YTQ" id="zOK-Ua-YMB"/>
+                        <outlet property="contactNumber" destination="yrq-Al-Vbo" id="daV-RN-Wuv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AXq-8L-5rO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
