--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17132" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17132" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="PzZ-kl-YC3">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -12,7 +12,7 @@
         <!--Users-->
         <scene sceneID="kTn-Rs-XWS">
             <objects>
-                <tableViewController id="6Wd-cO-8F6" sceneMemberID="viewController">
+                <tableViewController id="6Wd-cO-8F6" customClass="RandomUsersTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="z7m-Do-dZ9">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -24,29 +24,6 @@
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ZUY-fM-LHk" id="ehg-0q-uBe">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="58"/>
                                     <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yTo-Yf-LaR">
-                                            <rect key="frame" x="20" y="0.0" width="58" height="58"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" secondItem="yTo-Yf-LaR" secondAttribute="height" multiplier="1:1" id="Ods-S7-EWL"/>
-                                            </constraints>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x2M-3C-n9i">
-                                            <rect key="frame" x="86" y="19" width="308" height="20"/>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstItem="x2M-3C-n9i" firstAttribute="top" secondItem="ehg-0q-uBe" secondAttribute="topMargin" constant="8" id="74Q-RD-k8N"/>
-                                        <constraint firstItem="x2M-3C-n9i" firstAttribute="leading" secondItem="yTo-Yf-LaR" secondAttribute="trailing" constant="8" symbolic="YES" id="A07-S4-mky"/>
-                                        <constraint firstItem="yTo-Yf-LaR" firstAttribute="leading" secondItem="ehg-0q-uBe" secondAttribute="leading" constant="20" id="JH3-dW-A3T"/>
-                                        <constraint firstItem="x2M-3C-n9i" firstAttribute="trailing" secondItem="ehg-0q-uBe" secondAttribute="trailingMargin" id="iI1-pl-o3a"/>
-                                        <constraint firstItem="yTo-Yf-LaR" firstAttribute="top" secondItem="ehg-0q-uBe" secondAttribute="top" id="nl8-i2-d3e"/>
-                                        <constraint firstAttribute="bottom" secondItem="yTo-Yf-LaR" secondAttribute="bottom" id="qml-iL-j3j"/>
-                                        <constraint firstItem="x2M-3C-n9i" firstAttribute="centerY" secondItem="yTo-Yf-LaR" secondAttribute="centerY" id="tns-tR-Jan"/>
-                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <segue destination="Bbz-N0-GFG" kind="show" identifier="DetailSegue" id="Drc-fh-ngn"/>
@@ -58,18 +35,16 @@
                             <outlet property="delegate" destination="6Wd-cO-8F6" id="UTv-4n-crD"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Users" id="azs-1O-c7I">
-                        <barButtonItem key="rightBarButtonItem" title="Add" id="EyK-Ye-SWV"/>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Users" id="azs-1O-c7I"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aKm-xP-OjW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1352.1739130434785" y="59.598214285714285"/>
         </scene>
-        <!--View Controller-->
+        <!--Detail View Controller-->
         <scene sceneID="qXv-Dr-4xq">
             <objects>
-                <viewController id="Bbz-N0-GFG" sceneMemberID="viewController">
+                <viewController id="Bbz-N0-GFG" customClass="DetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8UQ-Ji-d2w">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -117,6 +92,12 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="a7q-jd-dHp"/>
+                    <connections>
+                        <outlet property="emailLabel" destination="PCY-yW-KQx" id="7o2-kJ-OFj"/>
+                        <outlet property="nameLabel" destination="0sx-4G-xyF" id="c8q-g4-KSv"/>
+                        <outlet property="phoneLabel" destination="7r3-Iu-dXk" id="Z9d-39-cQR"/>
+                        <outlet property="userImageView" destination="r2k-NY-HPn" id="xgy-bi-UBl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0jc-I8-TWv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
