User needs to swipe slightly down to refresh pictures. Bug?

--- a/Random Users/Storyboards/Base.lproj/Main.storyboard
+++ b/Random Users/Storyboards/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Classmates-->
+        <!--Ahoy! Classmates-->
         <scene sceneID="I7d-jH-hbX">
             <objects>
                 <tableViewController id="Hyz-CQ-ShK" customClass="ContactTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
@@ -58,7 +58,7 @@
                             <outlet property="delegate" destination="Hyz-CQ-ShK" id="zFz-sX-RL5"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Classmates" id="0ID-cR-3FN"/>
+                    <navigationItem key="navigationItem" title="Ahoy! Classmates" id="0ID-cR-3FN"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oTl-9o-shb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -97,6 +97,13 @@
                                 <rect key="frame" x="169" y="846" width="77" height="16"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                 <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Ahoy! Classmates" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fvx-Mr-wos">
+                                <rect key="frame" x="134" y="817" width="148" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
